// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changelogPublish fixture: empty.md 1`] = `
Object {
  "isValid": false,
  "message": "Changelog must have an 'Unreleased' section",
}
`;

exports[`changelogPublish fixture: many.md 1`] = `
Object {
  "changelog": "# Changelog

This is a changelog!

## [Unreleased](https://github.com/airtable/some-example-repo/compare/@tagPrefix@1.2.3...HEAD)

## [1.2.3](https://github.com/airtable/some-example-repo/compare/@tagPrefix@1.2.1...@tagPrefix@1.2.3) - 2019-06-20

-   Something

## [1.2.1](https://github.com/somehats/changelog-publish/compare/v1.2.0...v1.2.1) - 2019-06-19

-   Something else

## [1.2.0](https://github.com/somehats/changelog-publish/releases/tag/v1.2.0) - 2019-06-19

-   Something else
",
  "isValid": true,
}
`;

exports[`changelogPublish fixture: no-section-unreleased.md 1`] = `
Object {
  "isValid": false,
  "message": "Changelog must have an 'Unreleased' section",
}
`;

exports[`changelogPublish fixture: no-title.md 1`] = `
Object {
  "changelog": "This is a changelog!

## [Unreleased](https://github.com/airtable/some-example-repo/compare/@tagPrefix@1.2.3...HEAD)

## [1.2.3](https://github.com/airtable/some-example-repo/compare/@tagPrefix@1.0.0...@tagPrefix@1.2.3) - 2019-06-20

## [1.0.0](https://github.com/somehats/changelog-publish/releases/tag/v1.0.0) - 2019-06-19

### Added

-   Something
",
  "isValid": true,
}
`;

exports[`changelogPublish fixture: no-versions.md 1`] = `
Object {
  "changelog": "# Changelog

This is a changelog!

## [Unreleased](https://github.com/airtable/some-example-repo/compare/@tagPrefix@1.2.3...HEAD)

## [1.2.3](https://github.com/airtable/some-example-repo/releases/tag/@tagPrefix@1.2.3) - 2019-06-20

-   Something
",
  "isValid": true,
}
`;

exports[`changelogPublish fixture: unlinked-version.md 1`] = `
Object {
  "isValid": false,
  "message": "Version heading \\"1.2.0 - 2019-06-19\\" isn't correctly linked",
}
`;

exports[`changelogPublish fixture: valid.md 1`] = `
Object {
  "changelog": "# Changelog

This is a changelog!

## [Unreleased](https://github.com/airtable/some-example-repo/compare/@tagPrefix@1.2.3...HEAD)

## [1.2.3](https://github.com/airtable/some-example-repo/compare/@tagPrefix@1.2.0...@tagPrefix@1.2.3) - 2019-06-20

-   Something

## [1.2.0](https://github.com/somehats/changelog-publish/releases/tag/v1.2.0) - 2019-06-19

-   Something else
",
  "isValid": true,
}
`;
